--- a/Frontend/src/styles/components/_container.scss
+++ b/Frontend/src/styles/components/_container.scss
@@ -1,30 +1,13 @@
 .container {
-    &__highfive {
-        opacity: 1;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0 450px;
-
-        &:before {
-            background-color: aliceblue;
-            content: "";
-            display: block;
-            opacity: .4;
-            width: 48%;
-            height: 50px;
-            position: absolute;
-            z-index: -1;
-            border-radius: 41px;
-        }
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
     &:before {
         background-image: url("../img/OfficeView.jpeg");
         background-repeat: no-repeat;
         content: "";
-        align-items: center;
         position: absolute;
         display: block;
         background-size: cover;
@@ -35,4 +18,45 @@
         left: 0;
         z-index: -2;
     }
+}
+
+.header {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // position: absolute;
+        // bottom: 0;
+        width: 100%;
+
+        @media(max-width: 768px) {
+                flex-wrap: wrap;
+        }
+
+        &__column {
+
+            display: flex;
+            flex-direction: column;
+            min-height: 118px;
+            width: 100%;
+            // background-color: white;
+            padding: 20px;
+            align-items: center;
+        }
+
+        &__header {
+            margin-bottom: 20px;
+
+            &:after {
+                content: "";
+                display: block;
+                margin: 0 auto;
+                width: 50%;
+                padding-top: 10px;
+                border-bottom: 1px solid red;
+            }
+        }
+}
+
+* {
+    margin: 0;
 }
