Updated button spacing

--- a/Frontend/src/styles/components/_button.scss
+++ b/Frontend/src/styles/components/_button.scss
@@ -5,7 +5,7 @@
     padding: 20px;
     background-color: #FF550B;
     border: 0;
-    position: relative;
-    bottom: 0;
+    position: absolute;
+    bottom: 250px;
     color: white;
 }
