--- a/Frontend/src/styles/components/_container.scss
+++ b/Frontend/src/styles/components/_container.scss
@@ -65,6 +65,9 @@
     bottom: 0;
     justify-content: center;
     align-items: center;
+    background: white;
+    border-radius: 10px;
+    padding: 20px;
 }
 
 * {
